Enlace para crear formulario empleados.

--- a/src/app/empleados/formulario/formulario.component.html
+++ b/src/app/empleados/formulario/formulario.component.html
@@ -1,1 +1,8 @@
-<p>formulario works!</p>
+<mat-card appearance="outlined">
+    <mat-card-header>
+        <mat-card-title> Empleados</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        
+    </mat-card-content>
+</mat-card>
