--- a/src/app/empleados/listado/listado.component.html
+++ b/src/app/empleados/listado/listado.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <button mat-button color="primary" aria-label="Nueva empresa">
+    <button mat-button color="primary" aria-label="Nueva empresa" (click)="onNuevo()">
         Nuevo
     </button>
 </div>
